--- a/_c8oProject/mobilePages/FlowViewer.yaml
+++ b/_c8oProject/mobilePages/FlowViewer.yaml
@@ -1505,6 +1505,78 @@ title: Title for FlowViewer
                     - xmlizable: 
                       - ↑classname: com.twinsoft.convertigo.beans.ngx.components.MobileSmartSourceType
                       - MobileSmartSourceType: 'script:(item.isSelected) ? ''background-color: #0CBBE7;''  : ''background-color: #fff; '' '
+        ↓Div1 [ngx.components.UIDynamicElement-1607531676957]: 
+          beanData: '{"ionBean":"DivTag"}'
+          tagName: div
+          ↓c [ngx.components.UIAttribute-1607531676960]: 
+            attrName: class
+            attrValue: 
+              - xmlizable: 
+                - ↑classname: com.twinsoft.convertigo.beans.ngx.components.MobileSmartSourceType
+                - MobileSmartSourceType: plain:bd_content_2
+          ↓Tag [ngx.components.UIElement-1607531676963]: 
+            tagName: ul
+            ↓Directive [ngx.components.UIControlDirective-1607531676966]: 
+              directiveItemName: item
+              directiveSource: 
+                - xmlizable: 
+                  - ↑classname: com.twinsoft.convertigo.beans.ngx.components.MobileSmartSourceType
+                  - MobileSmartSourceType: script:this.breadcrumb
+              ↓Tag [ngx.components.UIElement-1607531676969]: 
+                tagName: li
+                ↓Tag [ngx.components.UIElement-1607531676972]: 
+                  tagName: a
+                  ↓Text [ngx.components.UIText-1607531676975]: 
+                    textValue: 
+                      - xmlizable: 
+                        - ↑classname: com.twinsoft.convertigo.beans.ngx.components.MobileSmartSourceType
+                        - MobileSmartSourceType: script:item.displayName
+                ↓Event [ngx.components.UIControlEvent-1607531676978]: 
+                  ↓updateMainGraphAndUnselectBreadcrumb [ngx.components.UICustomAction-1607531676981]: 
+                    actionValue: 
+                      - xmlizable: 
+                        - ↑classname: com.twinsoft.convertigo.beans.common.FormatedContent
+                        - com.twinsoft.convertigo.beans.common.FormatedContent: 
+                          →: |
+                            '		page.c8o.log.debug(''[MB] ''+ props.actionFunction +'': ''+ props.actionName);
+                            		var cellsToAdd = vars.breadcrumbObject.graph.getCells();
+                            		this.updateGraph(this.graph, cellsToAdd);
+                            		
+                            		if(!vars.breadcrumbObject.isSelected)
+                            			vars.breadcrumbObject.isSelected = true
+                            			
+                            		this.unselectBreadcrumb(vars.breadcrumbObject.id);
+                            		resolve();
+                            '
+                    ↓graph [ngx.components.UIControlVariable-1607531676984]: 
+                      isEnabled: false
+                      varValue: 
+                        - xmlizable: 
+                          - ↑classname: com.twinsoft.convertigo.beans.ngx.components.MobileSmartSourceType
+                          - MobileSmartSourceType: script:item.graph
+                    ↓id [ngx.components.UIControlVariable-1607531676987]: 
+                      isEnabled: false
+                      varValue: 
+                        - xmlizable: 
+                          - ↑classname: com.twinsoft.convertigo.beans.ngx.components.MobileSmartSourceType
+                          - MobileSmartSourceType: script:item.id
+                    ↓isSelected [ngx.components.UIControlVariable-1607531676990]: 
+                      isEnabled: false
+                      varValue: 
+                        - xmlizable: 
+                          - ↑classname: com.twinsoft.convertigo.beans.ngx.components.MobileSmartSourceType
+                          - MobileSmartSourceType: script:item.isSelected
+                    ↓breadcrumbObject [ngx.components.UIControlVariable-1607531676993]: 
+                      varValue: 
+                        - xmlizable: 
+                          - ↑classname: com.twinsoft.convertigo.beans.ngx.components.MobileSmartSourceType
+                          - MobileSmartSourceType: script:item
+                ↓Attr [ngx.components.UIAttribute-1607531676996]: 
+                  attrName: style
+                  attrValue: 
+                    - xmlizable: 
+                      - ↑classname: com.twinsoft.convertigo.beans.ngx.components.MobileSmartSourceType
+                      - MobileSmartSourceType: 'script:(item.isSelected) ? ''background-color: #0CBBE7;''  : ''background-color: #fff; '' '
     ↓GridCol1 [ngx.components.UIDynamicElement-1600682513448]: 
       beanData: '{"ionBean":"GridCol","SizeXl":"plain:2"}'
       isEnabled: false
