--- a/_c8oProject/mobileApplication.yaml
+++ b/_c8oProject/mobileApplication.yaml
@@ -1419,64 +1419,13 @@ tplProjectName: C8oStudio
           	z-index: 1000;
           }
           
-          
-          .bd_content_2 {
-          	position: absolute;
-            	width: 100%;
-            	float: left;
-            	margin: 20px;
-          //	bottom: 20px;
-          }
-          
-          .bd_content_2 > ul {
-          	list-style-type: none;
-          }
-          
-          .bd_content_2 > ul > li {
-            	position: relative;
-            	float: left;
-            	transform: skewX(-15deg);  
-            	background-color: #000;
-          	z-index: 1;
-          	transition: all 0.5s;
-          	margin-left: 5px;
-          }
-          
-          .bd_content_2 > ul > li:hover {
-          	background-color: #CFD8DC;
-          	cursor: pointer;
-          }
-          
-          .bd_content_2 > ul > li  > a {
-           	display: block;
-            	padding: 10px;
-            	font-size: 15px;
-           	transform: skewX(15deg);
-           	text-decoration:none;
-           	color: #444;
-          	font-weight: 300;
-          }
-          .bd_content_2 > ul > li:last-child {
-            background-color: #78909C;
-          }
-          
-          
-          
-          
-          
-          
-          
-          
-          
-          
-          
-          
           .bd_content_1 {
           	position: absolute;
             	width: 100%;
             	float: left;
-            	margin: 20px;
-          	bottom: 20px;
+            	margin-left: 0px;
+          	left: -31px;
+          	bottom: 9px;
           }
           
           .bd_content_1 > ul {
@@ -1497,8 +1446,8 @@ tplProjectName: C8oStudio
           
           .bd_content_1 > ul > li  > a {
             	display: block;
-            	padding: 10px;
-            	font-size: 15px;
+            	padding: 5px;
+            	font-size: 12px;
            	transform: skewX(15deg);
            	text-decoration:none;
            	color: #000;
